<resources>

    <string name="app_name">Covid19App</string>

    <!--Strings for TextView-->
    <string name="countries">Countries</string>
    <string name="new_confirmed">Confirmed</string>
    <string name="new_recovered">Recovered</string>
    <string name="new_death">Deaths</string>
    <string name="recovered">Total recovered</string>
    <string name="deaths">Total deaths</string>
    <string name="confirmed">Total confirmed</string>

    <!--Strings for AlertDialog-->
    <string name="title">Ooops</string>
    <string name="text">An error has occurred</string>
    <string name="accept">OK</string>

    <!--Strings for Image description-->
    <string name="image_country">imageCountry</string>
    <string name="image_confirmed">imageConfirmed</string>
    <string name="image_recovered">imageRecovered</string>
    <string name="image_dead">imageDead</string>

    <!--Strings for ViewHolder-->
    <string name="plus">+%d</string>
    <string name="dotName">%d. %s</string>

</resources>
