<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackLayer"
    tools:context=".presentation.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_header_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_start_end_16dp"
                android:layout_marginTop="@dimen/linear_layout_margin_top"
                android:layout_marginEnd="@dimen/layout_margin_start_end_16dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCountryNameMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:gravity="center"
                    android:text="@string/countries"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:id="@+id/textViewNewConfirmedMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:gravity="center"
                    android:text="@string/new_confirmed"
                    android:textColor="@color/colorPurple" />

                <TextView
                    android:id="@+id/textViewNewRecoveredMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:gravity="center"
                    android:text="@string/new_recovered"
                    android:textColor="@color/colorLightGreen" />

                <TextView
                    android:id="@+id/textViewNewDeathMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:gravity="center"
                    android:text="@string/new_death"
                    android:textColor="@color/colorRed" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recyclerview_new_item" />

        </LinearLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>