<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".presentation.view.MainActivity">

    <include
        android:id="@+id/backLayer"
        layout="@layout/main_header_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frontLayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_space"
        android:background="@drawable/recyclerview_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backLayer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_space"
            android:layout_marginTop="@dimen/linear_layout_margin_top"
            android:layout_marginEnd="@dimen/layout_space"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCountryNameMain"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/countries"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:id="@+id/textViewNewConfirmedMain"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/new_confirmed"
                android:textColor="@color/colorBlue" />

            <TextView
                android:id="@+id/textViewNewRecoveredMain"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/new_recovered"
                android:textColor="@color/colorLightGreen" />

            <TextView
                android:id="@+id/textViewNewDeathMain"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/new_death"
                android:textColor="@color/colorRed" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true"
            android:orientation="vertical"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarThumbVertical="@color/colorSecondaryText"
            android:scrollbarTrackVertical="@color/colorFrontLayer"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/recyclerview_item" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>

